# template-py-flask-orm

./: .coveragerc  .env.example  .gitignore  README.md  asgi.py  docker-compose.yml  main.py  pyproject.toml  routers.py
src/apps/user/: models.py  routers.py  schemas.py
src/settings/: config.py  database.py  oauth.py
tests/: config.py  test_user.py
